<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <io.legado.app.ui.main.my.NovelHelperPreferenceCategory
        android:title="@string/my_reading_tools"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/novel_helper_preference_category">

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_sources"
            android:key="bookSourceManage"
            android:summary="@string/book_source_manage_desc"
            android:title="@string/book_source_manage"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_automation"
            android:key="autoTaskManage"
            android:summary="@string/auto_task_manage_desc"
            android:title="@string/auto_task_manage"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/novel_helper_pref_automation"
            android:key="autoTaskService"
            android:summary="@string/auto_task_service_desc"
            android:title="@string/auto_task_service"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_rules"
            android:key="txtTocRuleManage"
            android:summary="@string/config_txt_toc_rule"
            android:title="@string/txt_toc_rule"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_replace"
            android:key="replaceManage"
            android:summary="@string/replace_purify_desc"
            android:title="@string/replace_purify"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_dictionary"
            android:key="dictRuleManage"
            android:summary="@string/config_dict_rule"
            android:title="@string/dict_rule"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

    </io.legado.app.ui.main.my.NovelHelperPreferenceCategory>

    <io.legado.app.ui.main.my.NovelHelperPreferenceCategory
        android:title="@string/my_personalize"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/novel_helper_preference_category">

        <io.legado.app.ui.main.my.NovelHelperNameListPreference
            android:defaultValue="0"
            android:entries="@array/theme_mode"
            android:entryValues="@array/theme_mode_v"
            android:icon="@drawable/novel_helper_pref_theme"
            android:key="themeMode"
            android:summary="@string/theme_mode_desc"
            android:title="@string/theme_mode"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_theme"
            android:key="theme_setting"
            android:summary="@string/theme_setting_s"
            android:title="@string/theme_setting"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_settings"
            android:key="setting"
            android:summary="@string/other_setting_s"
            android:title="@string/other_setting"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

    </io.legado.app.ui.main.my.NovelHelperPreferenceCategory>

    <io.legado.app.ui.main.my.NovelHelperPreferenceCategory
        android:title="@string/my_library_data"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/novel_helper_preference_category">

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_bookmark"
            android:key="bookmark"
            android:summary="@string/all_bookmark"
            android:title="@string/bookmark"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_history"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            android:title="@string/read_record"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_folder"
            android:key="fileManage"
            android:summary="@string/file_manage_summary"
            android:title="@string/file_manage"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

    </io.legado.app.ui.main.my.NovelHelperPreferenceCategory>

    <io.legado.app.ui.main.my.NovelHelperPreferenceCategory
        android:key="aboutCategory"
        android:title="@string/my_about"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/novel_helper_preference_category">

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_about"
            android:key="about"
            android:title="@string/about"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

        <io.legado.app.ui.main.my.NovelHelperPreference
            android:icon="@drawable/novel_helper_pref_exit"
            android:key="exit"
            android:title="@string/exit"
            app:iconSpaceReserved="false"
            app:layout="@layout/novel_helper_preference" />

    </io.legado.app.ui.main.my.NovelHelperPreferenceCategory>

</androidx.preference.PreferenceScreen>
