<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bottom_navigation_view">

    <item
        android:id="@+id/menu_bookshelf"
        android:icon="@drawable/novel_helper_nav_books"
        android:title="@string/bookshelf" />
    <item
        android:id="@+id/menu_discovery"
        android:icon="@drawable/novel_helper_nav_discover"
        android:title="@string/discovery" />
    <item
        android:id="@+id/menu_rss"
        android:icon="@drawable/novel_helper_nav_notes"
        android:title="@string/rss" />
    <item
        android:id="@+id/menu_my_config"
        android:icon="@drawable/novel_helper_nav_profile"
        android:title="@string/my" />

</menu>
